crates/lingui_macro/tests/snapshots/jsx__normalize_crlf_lf_cr.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>
hello
</Trans>;
<Trans>
hello
</Trans>;
<Trans>
hello
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "WfCysZ",
    message: "hello"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "WfCysZ",
    message: "hello"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "WfCysZ",
    message: "hello"
}}/>;
