crates/lingui_macro/tests/snapshots/jsx__quoted_jsx_attributes_are_handled.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>Speak "friend"!</Trans>;
<Trans id="custom-id">Speak "friend"!</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "NWmRwM",
    message: 'Speak "friend"!'
}}/>;
<Trans_ {.../*i18n*/ {
    id: "custom-id",
    message: 'Speak "friend"!'
}}/>;
