crates/lingui_macro/tests/snapshots/jsx__strip_whitespaces_in_jsxtext_but_keep_in_jsx_expression_containers.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
  <Trans>
  {"Wonderful framework "}
  <a href="https://nextjs.org">Next.js</a>
  {" say hi. And "}
  <a href="https://nextjs.org">Next.js</a>
  {" say hi."}
</Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "3YVd0H",
    components: {
        0: <a href="https://nextjs.org"/>,
        1: <a href="https://nextjs.org"/>
    },
    message: "Wonderful framework <0>Next.js</0> say hi. And <1>Next.js</1> say hi."
}}/>;
