crates/lingui_macro/tests/snapshots/jsx__use_decoded_html_entities.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>&amp;</Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "EwTON7",
    message: "&"
}}/>;
