crates/lingui_macro/tests/snapshots/jsx__use_js_macro_in_jsx_attrs.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { t } from '@lingui/core/macro';
import { Trans } from '@lingui/react/macro';
<Trans>Read <a href="/more" title={t`Full content of ${articleName}`}>more</a></Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
import { i18n as $_i18n } from "@lingui/core";
<Trans_ {.../*i18n*/ {
    id: "QZyANg",
    components: {
        0: <a href="/more" title={$_i18n._(/*i18n*/ {
            id: "qzc3IN",
            message: "Full content of {articleName}",
            values: {
                articleName: articleName
            }
        })}/>
    },
    message: "Read <0>more</0>"
}}/>;
