crates/lingui_macro/tests/snapshots/jsx__use_js_plural_in_jsx_attrs.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { plural } from '@lingui/core/macro';
<a href="/about" title={plural(count, {
  one: "\# book",
  other: "\# books"
})}>About</a>

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
<a href="/about" title={$_i18n._(/*i18n*/ {
    id: "esnaQO",
    message: "{count, plural, one {# book} other {# books}}",
    values: {
        count: count
    }
})}>About</a>;
